adjust the margin

--- a/_posts/2016-03-13-Hot github projects contribution by timezones.html
+++ b/_posts/2016-03-13-Hot github projects contribution by timezones.html
@@ -18,6 +18,12 @@ layout: post
         body{
             font-size: 18px;
         }
+        h3{
+            margin-top: 50px;
+        }
+        h4{
+            margin-top: 30px;
+        }
     </style>
     <script type="text/javascript" src="{{ "/js/jquery.js" | prepend: site.baseurl }}"></script>
     <script type="text/javascript" src="{{ "/js/bootstrap.js" | prepend: site.baseurl }}"></script>
